# chickmate

./: Cargo.toml
src/: args.yaml  consts.rs  error.rs  fetch.rs  ls.rs  main.rs  new.rs  pgn.rs  rm.rs  utils.rs
src/lichess_api/: mod.rs
src/user_info/: builder.rs  mod.rs  token.rs  user.rs  utils.rs
