[package]
name = "chickmate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shakmaty = "0.20"
clap = {version = "2.33", features = ["yaml"]}
directories = "4.0"
lazy_static="1.4"
rand = "0.8"
chacha20poly1305="0.9"
rpassword = "5.0"
hkdf = "0.11"
sha3 = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comfy-table = "5.0"
chrono="0.4"
pgn-reader="0.19"
reqwest = {version = "0.11", features = ["json"]}
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread" ], default-features = false }
indicatif="0.16"
